test/cases/compile_errors/union_init_with_non_type_as_first_param.zig
export fn u() void {
    _ = @unionInit(0, "a", 0);
}

// error
// backend=stage2
// target=native
//
// :2:20: error: expected type 'type', found 'comptime_int'
